--- a/index.css
+++ b/index.css
@@ -157,7 +157,6 @@ input[type="checkbox"]:checked::before {
   }
 }
 
-/* крестик */
 .cross-inner {
   position: absolute;
   top: 5px;
@@ -198,4 +197,13 @@ input[type="checkbox"]:checked::before {
   left: 9%;
   top: 18px;
   transition-delay: 0.25s;
+}
+
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.progress-bar {
+  transition: width 4s linear;
 }
